Fix test to retrieve first fold correctly